--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     "suppressImplicitAnyIndexErrors": true,
     "allowJs": true,
     "lib": ["ESNext", "DOM"],
+    "baseUrl": ".",
     "paths": {
       "@xiao-ai/utils/*": ["./node_modules/@xiao-ai/utils/dist/types/*"]
     }
