fix: 修改代码版权描述

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "针对知乎的脚本集合",
   "author": "xiaoboost",
-  "license": "MIT",
+  "license": "GPLv3.0",
   "scripts": {
     "build": "node ./build/build.mjs",
     "watch": "node ./build/watch.mjs"
