fix: 变更构建配置、脚本名称

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "zhihu-utils",
-  "version": "1.0.0",
+  "displayName": "知乎辅助工具",
+  "version": "1.1.0",
   "description": "针对知乎的脚本集合",
   "author": "xiaoboost",
   "license": "GPLv3.0",
