--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,7 @@
     "paths": {
       "@xiao-ai/utils/*": ["./node_modules/@xiao-ai/utils/dist/types/*"]
     }
-  }
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
