fix: 命令兼容 npm，而非强制使用 pnpm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,6 @@
       "@xiao-ai/utils/*": ["./node_modules/@xiao-ai/utils/dist/types/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "types"],
   "exclude": ["node_modules", "dist"]
 }
