--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build:type": "tsc -p ./tsconfig.json --noEmit",
     "build:code": "node ./build/build.mjs",
-    "build": "pnpm run build:type && pnpm run build:code",
+    "build": "npm run build:type && npm run build:code",
     "watch": "node ./build/watch.mjs"
   },
   "repository": {
