--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "GPLv3.0",
   "scripts": {
     "build:dep": "pnpm run build --filter @scripts/builder...",
-    "build": "pnpm run build --filter @scripts/zhihu"
+    "build": "pnpm run build --filter @scripts/zhihu",
+    "lint": "pnpm run -r lint --parallel --filter .",
+    "lint:fix": "pnpm run -r lint:fix --parallel --filter ."
   },
   "repository": {
     "type": "git",
