feat: 完成绅士工具的初始化

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "GPLv3.0",
   "scripts": {
     "build:dep": "pnpm run build --filter @scripts/builder...",
-    "build": "pnpm run build --filter @scripts/zhihu",
+    "build": "pnpm run build --filter @scripts/zhihu --filter @scripts/e-hentai",
     "lint": "pnpm run -r lint --parallel --filter .",
     "lint:fix": "pnpm run -r lint:fix --parallel --filter ."
   },
