fix: 修正环境变量的错误

--- a/packages/e-hentai/package.json
+++ b/packages/e-hentai/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@scripts/e-hentai",
   "displayName": "绅士辅助工具",
-  "version": "1.2.2",
-  "description": "针对 e-hentai 的脚本集合",
+  "version": "1.0.0",
+  "description": "绅士站的辅助脚本，提供在线下载功能",
   "author": "xiaoboost",
   "license": "GPLv3.0",
   "scripts": {
