--- a/packages/e-hentai/package.json
+++ b/packages/e-hentai/package.json
@@ -7,9 +7,8 @@
   "license": "GPLv3.0",
   "scripts": {
     "build:type": "tsc -p ./tsconfig.json --noEmit",
-    "build:code": "builder build --outFile=../../dist/e-hentai.js",
-    "build": "npm run build:type && npm run build:code -- --production",
-    "watch": "npm run build:code -- --development",
+    "build": "npm run build:type && builder build --outFile=../../dist/e-hentai.js --production",
+    "watch": "builder watch --outFile=../../dist/e-hentai.js --development",
     "lint": "eslint --quiet --no-error-on-unmatched-pattern --config ../../.eslintrc.js src/**/*.{ts,tsx,js,jsx}",
     "lint:fix": "eslint --fix --quiet --no-error-on-unmatched-pattern --config ../../.eslintrc.js src/**/*.{ts,tsx,js,jsx}"
   },
@@ -22,6 +21,7 @@
     "@scripts/builder": "workspace:*",
     "@scripts/tsconfig": "workspace:*",
     "@types/scripts": "workspace:*",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.4"
   }
 }
