--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@scripts/utils",
+  "name": "@scripts/components",
   "version": "1.0.0",
-  "description": "工具库",
+  "description": "公共组件",
   "author": "xiaoboost",
   "license": "GPLv3.0",
   "source": "./src/index.ts",
@@ -12,8 +12,9 @@
     "lint:fix": "eslint --fix --quiet --no-error-on-unmatched-pattern --config ../../.eslintrc.js src/**/*.{ts,tsx,js,jsx}"
   },
   "dependencies": {
+    "@scripts/utils": "workspace:*",
     "@xiao-ai/utils": "^1.4.3",
-    "jss": "^10.9.0"
+    "preact": "^10.6.4"
   },
   "devDependencies": {
     "@scripts/tsconfig": "workspace:*",
