--- a/packages/e-hentai/package.json
+++ b/packages/e-hentai/package.json
@@ -13,6 +13,7 @@
     "lint:fix": "eslint --fix --quiet --no-error-on-unmatched-pattern --config ../../.eslintrc.js src/**/*.{ts,tsx,js,jsx}"
   },
   "dependencies": {
+    "@scripts/components": "workspace:*",
     "@scripts/utils": "workspace:*",
     "@xiao-ai/utils": "^1.4.3",
     "preact": "^10.6.4"
