--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -15,11 +15,12 @@
     "lint:fix": "eslint --fix --quiet --no-error-on-unmatched-pattern --config ../../.eslintrc.js src/**/*.{ts,tsx,js,jsx}"
   },
   "dependencies": {
-    "@xiao-ai/utils": "^1.5.0",
+    "@xiao-ai/utils": "^1.5.1",
     "esbuild": "^0.14.11",
     "jss": "^10.9.0",
     "jss-preset-default": "^10.9.0",
     "moment": "^2.29.1",
+    "source-map": "^0.7.3",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
