--- a/packages/e-hentai/package.json
+++ b/packages/e-hentai/package.json
@@ -16,6 +16,7 @@
     "@scripts/components": "workspace:*",
     "@scripts/utils": "workspace:*",
     "@xiao-ai/utils": "^1.5.1",
+    "axios": "^0.24.0",
     "preact": "^10.6.4"
   },
   "devDependencies": {
