--- a/packages/e-hentai/package.json
+++ b/packages/e-hentai/package.json
@@ -7,8 +7,8 @@
   "license": "GPLv3.0",
   "scripts": {
     "build:type": "tsc -p ./tsconfig.json --noEmit",
-    "build": "npm run build:type && builder build --outFile=../../dist/e-hentai.js --production",
-    "watch": "builder watch --outFile=../../dist/e-hentai.js --development",
+    "build": "npm run build:type && builder build --outFile=dist/e-hentai.js --production",
+    "watch": "builder watch --outFile=dist/e-hentai.js --development",
     "lint": "eslint --quiet --no-error-on-unmatched-pattern --config ../../.eslintrc.js src/**/*.{ts,tsx,js,jsx}",
     "lint:fix": "eslint --fix --quiet --no-error-on-unmatched-pattern --config ../../.eslintrc.js src/**/*.{ts,tsx,js,jsx}"
   },
@@ -16,7 +16,6 @@
     "@scripts/components": "workspace:*",
     "@scripts/utils": "workspace:*",
     "@xiao-ai/utils": "^1.5.1",
-    "axios": "^0.24.0",
     "preact": "^10.6.4"
   },
   "devDependencies": {
